--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="welcome-box">
                         <span class="welcome-first animate" data-animate="fadeInUp">Hello, my name is</span>
                         <h1 class="welcome-title animate" data-animate="fadeInUp">sneha satish</h1>
-                        <p class="animate" data-animate="fadeInUp">Masters Student at Indiana University Bloomington.<br><br>Skilled in python, front-end web development with an interest in data science and machine learning. Apart from the technical aspect, I also enjoy creating vectors and graphics on Adobe Illustrator.<br><br>Always willing to learn new things and adapt to new evironments!</p>
+                        <p class="animate" data-animate="fadeInUp">Masters Student at Indiana University Bloomington.<br><br>With a Bachelor of Engineering in Computer Engineering, I have a strong foundation in data structures, machine learning, data warehousing and mining, database management systems and big data analytics. I have good decision making and problem solving skills. Apart from the technical aspect, I also enjoy creating vectors and graphics on Adobe Illustrator.<br><br>Always willing to learn new things and adapt to new evironments!</p>
                         <div class="scroll-down next-section animate data-animate="fadeInUp><img src="images/mouse-scroll.png" alt=""><span>Scroll Down</span></div>
                     </div>
                 </div>
