--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                                 </div>
                                                 <div class="item animate" data-animate="fadeInUp">
                                                     <div class="counter-box">
-                                                        <i class="fa fa-graduation-cap counter-icon" aria-hidden="true"></i><span class="count-number">1</span> Degree
+                                                        <i class="fa fa-graduation-cap counter-icon" aria-hidden="true"></i><span class="count-number">2</span> Degrees
                                                     </div>
                                                 </div>
                                                 <div class="item animate" data-animate="fadeInUp">
@@ -177,7 +177,7 @@
                                         <div class="service-box">
                                             <span class="service-icon"><i class="fa fa-database" aria-hidden="true"></i></span>
                                             <h3>Database Management</h3>
-                                            <p>Knowledge of SQL and NoSQL, retrieval and management of data, Manipulation of data and rules to write, validate and test data.</p>
+                                            <p>Knowledge of SQL, retrieval and management of data, Manipulation of data and rules to write, validate and test data.</p>
                                         </div>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
@@ -220,23 +220,23 @@
                                 <div class="row">
                                     <div class="col-md-8 offset-md-2">   
                                         <div class="skill-item">
-                                            <h6>Python</h6>
+                                            <h6>Data Analysis</h6>
                                             <div class="skill-bar">
-                                                <span>80%</span>
+                                                <span>75%</span>
                                                 <div class="filled-bar-3"></div>
                                             </div>          
                                         </div>
                                         <div class="skill-item">
-                                            <h6>Analysis & <br>Statistics</h6>
+                                            <h6>Tableau</h6>
                                             <div class="skill-bar">
-                                                <span>90%</span>
+                                                <span>70%</span>
                                                 <div class="filled-bar-2"></div>
                                             </div>          
                                         </div>
                                         <div class="skill-item">
-                                            <h6>Research</h6>
+                                            <h6>SQL</h6>
                                             <div class="skill-bar">
-                                                <span>80%</span>
+                                                <span>70%</span>
                                                 <div class="filled-bar-3"></div>
                                             </div>          
                                         </div>
