--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                             <div class="animate" data-animate="fadeInUp">
                                                 <span>About Me</span>
                                                 <h2>Who am i?</h2>
-                                                <p>I am a <strong>Computer Science Student</strong> with an interest in <strong>Graphic Design</strong> and <strong>always exploring new things</strong> related to my field. I am <strong>Analytical, Sincere</strong> and <strong>Practical.</strong></p>
+                                                <p>I am a <strong>Data Science Student</strong> with an interest in <strong>Graphic Design</strong> and <strong>always exploring new things</strong> related to my field. I am <strong>Analytical, Sincere</strong> and <strong>Practical.</strong></p>
                                             </div>
                                             <div class="facts-list owl-carousel">
                                                 <div class="item animate" data-animate="fadeInUp">
