--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
                                         <div class="skill-item last-skill">
                                             <h6>Management & <br> Leadership</h6>
                                             <div class="skill-bar">
-                                                <span>75%</span>
-                                                <div class="filled-bar"></div>
+                                                <span>70%</span>
+                                                <div class="filled-bar-3"></div>
                                             </div>          
                                         </div>                   
                                     </div>
